feat: 适配soybean-admin菜单格式
